--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,6 +1,6 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
+/* /* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
   License: none (public domain)
-*/
+
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -22,7 +22,7 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
+ HTML5 display-role reset for older browsers 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
@@ -44,7 +44,7 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}
+} */
 
 body {
   background-color: #f2ead5;
@@ -52,20 +52,19 @@ body {
 
 .bar {
   background-color: red;
-  margin: 5px;
   padding: 0;
-  height: 150px;
-  width: 40px;
-
+  margin: 0;
   float: left;
-  position: relative;
-  top: 345px;
+  position: absolute;
+  top: 350px;
 }
 
 .chart {
   border-bottom: 1px solid;
   border-left: 1px solid;
-  margin: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
   height: 500px;
   width: 500px;
   padding: 0;
