--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -69,6 +69,7 @@ body {
   position: relative;
   vertical-align: text-bottom;
   z-index: 1;
+  display: block;
 }
 
 .input {
@@ -88,4 +89,32 @@ body {
 
 h1 {
   text-align: center;
+}
+
+.color-picker {
+  color: rgb(255, 255, 255);
+  position: relative;
+  top: 0px;
+  z-index: 3;
+}
+
+.y-axis {
+  position: absolute;
+  left: -10px;
+  list-style-type: none;
+  top: 100px;
+  width: 100%;
+  padding-right: 20px;
+  border-top: 1px solid;
+  margin: -10px 0 0 -60px;
+}
+
+.x-axis {
+  
+}
+
+.bar span {
+  bottom: -20px;
+  float: right;
+  position: absolute;
 }
